run_spec(import.meta, ["html"]);
run_spec(import.meta, ["html"], { embeddedLanguageFormatting: "off" });
