// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svg.html - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html>
<html>
  <head>
    <title>SVG</title>
  </head>
  <body>
<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
<script>
document.addEventListener(
'DOMContentLoaded', () => {
  const element = document.getElementById('foo')
   if (element) {
element.fillStyle = 'currentColor'
}
});
</script>
<style >
    polygon { fill: black }

    div {
  color: white;
      font:18px serif;
      height: 100%;
      overflow: auto;
    }
  </style>
</svg>
  </body>
</html>

=====================================output=====================================
<!doctype html>
<html>
  <head>
    <title>SVG</title>
  </head>
  <body>
    <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
      <script>
        document.addEventListener(
        'DOMContentLoaded', () => {
          const element = document.getElementById('foo')
           if (element) {
        element.fillStyle = 'currentColor'
        }
        });
      </script>
      <style>
          polygon { fill: black }

          div {
        color: white;
            font:18px serif;
            height: 100%;
            overflow: auto;
          }
      </style>
    </svg>
  </body>
</html>

================================================================================
`;

exports[`svg.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!DOCTYPE html>
<html>
  <head>
    <title>SVG</title>
  </head>
  <body>
<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
<script>
document.addEventListener(
'DOMContentLoaded', () => {
  const element = document.getElementById('foo')
   if (element) {
element.fillStyle = 'currentColor'
}
});
</script>
<style >
    polygon { fill: black }

    div {
  color: white;
      font:18px serif;
      height: 100%;
      overflow: auto;
    }
  </style>
</svg>
  </body>
</html>

=====================================output=====================================
<!doctype html>
<html>
  <head>
    <title>SVG</title>
  </head>
  <body>
    <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
      <script>
        document.addEventListener("DOMContentLoaded", () => {
          const element = document.getElementById("foo");
          if (element) {
            element.fillStyle = "currentColor";
          }
        });
      </script>
      <style>
        polygon {
          fill: black;
        }

        div {
          color: white;
          font: 18px serif;
          height: 100%;
          overflow: auto;
        }
      </style>
    </svg>
  </body>
</html>

================================================================================
`;

exports[`svg.svg - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
<script>
document.addEventListener(
'DOMContentLoaded', () => {
  const element = document.getElementById('foo')
   if (element) {
element.fillStyle = 'currentColor'
}
});
</script>
<style >
    polygon { fill: black }

    div {
  color: white;
      font:18px serif;
      height: 100%;
      overflow: auto;
    }
  </style>
</svg>

=====================================output=====================================
<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
  <script>
    document.addEventListener(
    'DOMContentLoaded', () => {
      const element = document.getElementById('foo')
       if (element) {
    element.fillStyle = 'currentColor'
    }
    });
  </script>
  <style>
      polygon { fill: black }

      div {
    color: white;
        font:18px serif;
        height: 100%;
        overflow: auto;
      }
  </style>
</svg>

================================================================================
`;

exports[`svg.svg format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
<script>
document.addEventListener(
'DOMContentLoaded', () => {
  const element = document.getElementById('foo')
   if (element) {
element.fillStyle = 'currentColor'
}
});
</script>
<style >
    polygon { fill: black }

    div {
  color: white;
      font:18px serif;
      height: 100%;
      overflow: auto;
    }
  </style>
</svg>

=====================================output=====================================
<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
  <script>
    document.addEventListener("DOMContentLoaded", () => {
      const element = document.getElementById("foo");
      if (element) {
        element.fillStyle = "currentColor";
      }
    });
  </script>
  <style>
    polygon {
      fill: black;
    }

    div {
      color: white;
      font: 18px serif;
      height: 100%;
      overflow: auto;
    }
  </style>
</svg>

================================================================================
`;
